Fix layout issues

--- a/src/components/image.module.css
+++ b/src/components/image.module.css
@@ -1,11 +1,10 @@
-.container {
-  display: flex;
-  justify-content: center;
-}
-
 .image {
+  justify-self: center;
+  position: relative;
   width: 200px;
+  height: 200px;
   border-radius: 50%;
+  overflow: hidden;
 }
 
 .image:before {
@@ -15,8 +14,8 @@
   top: 0;
   left: 0;
   z-index: 1;
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   box-shadow: inset 0px 0px 2px 0px rgba(0, 0, 0, 0.1);
 }
