--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,18 +1,28 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap");
 
-html {
+* {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  text-align: center;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
 }
 
 h1 {
+  text-align: center;
   font-weight: 600;
 }
 
+p {
+  text-align: center;
+}
+
 .container {
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   justify-content: center;
   align-content: center;
+  padding: 48px;
 }
