--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,10 +1,10 @@
 .link {
-  margin: 8px;
+  display: inline-block;
+  padding: 8px;
 }
 
 .social {
-  display: flex;
-  justify-content: center;
+  justify-self: center;
 }
 
 .gmail:hover {
